[package]
name = "agh-suu-differential-dataflow"
version = "0.1.0"
authors = ["Tomasz Kasprzycki", "Bartlomiej Stepien", "Michal Sledz"]
edition = "2018"

[dependencies]
differential-dataflow = "0.11.0"
timely = "0.11.1"
bincode = "1.2.1"
serde = { version = "1.0.112", features = ["derive"] }

[[bin]]
name = "agh-suu-dd"
path = "src/bin/main.rs"
